5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1756_674.log
== TEST (2019-05-22 14:02:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("")))
print(size(vet))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:02:48) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("")))
print(size(vet))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:04:52) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("")))
print(size(vet))
print(min(vet))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:09:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("")))
print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
x = sum(vet)/size(vet)
print(rount(x, 2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:09:33) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("")))
print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
x = sum(vet)/size(vet)
print(rount(x, 2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:09:36) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("")))
print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
x = sum(vet)/size(vet)
print(rount(x, 2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:09:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("")))
print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
x = sum(vet)/size(vet)
print(rount(x, 2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:09:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("")))
print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
x = sum(vet)/size(vet)
print(rount(x, 2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:09:48) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("")))
print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
x = sum(vet)/size(vet)
print(rount(x, 2))



-- EXECUTION TIME:
0.43463
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/674/main.py", line 14, in <module>
    print(rount(x, 2))
NameError: name 'rount' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:10:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("")))
print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
x = sum(vet)/size(vet)
print(rount(x, 2))



-- EXECUTION TIME:
0.605034
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/674/main.py", line 14, in <module>
    print(rount(x, 2))
NameError: name 'rount' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:11:00) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("")))
print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
x = sum(vet)/size(vet)
print(rount(x, 2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:11:22) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("")))
print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
x = sum(vet)/size(vet)
print(round(x, 2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:11:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("")))
print(size(vet))
print(vet[0])
print(vet[-1])
print(max(vet))
print(min(vet))
print(sum(vet))
x = sum(vet)/size(vet)
print(round(x, 2))



-- EXECUTION TIME:
0.519573
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
